null check correction.