@@ -326,7 +326,7 @@ public class ApplicationServiceImpl implements IApplicationService {
         reactivateHealthProfessionalQueryParam.setSortType(sortingOrder);
         String column = getReactivationSortColumn(sortBy);
         reactivateHealthProfessionalQueryParam.setSortBy(column);
-        if (!StringUtils.isNotBlank(search) && value != null && !value.isBlank()) {
+        if (StringUtils.isBlank(search) && StringUtils.isNotBlank(value)) {
             reactivateHealthProfessionalQueryParam.setApplicantFullName(value);
         }
         try {
@@ -452,7 +452,7 @@ public class ApplicationServiceImpl implements IApplicationService {
         if (Objects.nonNull(registrationNo)) {
             applicationRequestParamsTo.setRegistrationNumber(registrationNo);
         }
-        if (!StringUtils.isNotBlank(search) && value != null && !value.isBlank()) {
+        if (StringUtils.isBlank(search) && StringUtils.isNotBlank(value)) {
             applicationRequestParamsTo.setApplicantFullName(value);
         }
         final int dataLimit = Math.min(MAX_DATA_SIZE, nmrPagination.getOffset());
