@@ -360,7 +360,7 @@ public class DashboardServiceImpl implements IDashboardService {
                 throw new InvalidRequestException(NMRError.MISSING_SEARCH_VALUE.getCode(), NMRError.MISSING_SEARCH_VALUE.getMessage());
             }
         }
-        if (!StringUtils.isNotBlank(search) && value != null && !value.isBlank()) {
+        if (StringUtils.isBlank(search) && StringUtils.isNotBlank(value)) {
             dashboardRequestParamsTO.setApplicantFullName(value);
         }
     }
